# snakemake-logger-plugin-github-status

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
docs/: intro.md
src/snakemake_logger_plugin_github_status/: __init__.py
tests/: test_plugin.py
