[project]
dependencies = [ "snakemake-interface-common>=1.22.0,<2", "snakemake-interface-logger-plugins>=2.1.0,<3", "requests>=2.32.5,<3", "gitpython>=3.1.46,<4",]
name = "snakemake-logger-plugin-github-status"
requires-python = ">=3.11,<4.0"
version = "0.3.0"
description = "A Snakemake logger plugin that reports workflow progress and errors to the GitHub status API."
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]

[[project.authors]]
name = "Johannes Koester"
email = "johannes.koester@uni-due.de"

[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling",]

[dependency-groups]
dev = [ "ruff", "pytest", "pytest-cov", "pyrefly", "twine", "build",]

[project.urls]
Repository = "https://github.com/snakemake/snakemake-logger-plugin-github-status"
Documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/logger/github-status.html"

[tool.pixi.workspace]
channels = [ "conda-forge", "bioconda",]
platforms = [ "linux-64",]

[tool.pixi.tasks]

[tool.coverage.report]
exclude_lines = [ "pass", "\\.\\.\\.",]
fail_under = 75.0

[tool.pixi.pypi-dependencies.snakemake_logger_plugin_github_status]
path = "."
editable = true

[tool.pixi.environments.dev]
features = [ "dev",]

[tool.pixi.feature.dev.tasks]
lint = "ruff check"
format = "ruff format"
typecheck = "pyrefly check"
coverage-report = "coverage report -m"
test = "pytest --cov=snakemake_logger_plugin_github_status --cov-report=xml:coverage-report/coverage.xml --cov-report=term-missing tests/test_plugin.py"
build = "python -m build"
check-build = { cmd = "python -m twine check dist/*", depends-on = ["build"] }
